# videoEditingAgent

./: .env.example  .gitignore  README.md  custom_model.py  main.py  pyproject.toml
examples/: advanced_composition_example.py  chroma_key_example.py  luminance_key_example.py  transitions_example.py  visual_effects_example.py
tools/: __init__.py  moviepy_tool.py
